--- a/bin/Vista/ModificarDonacion.fxml
+++ b/bin/Vista/ModificarDonacion.fxml
@@ -1,18 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="423.0" style="-fx-background-color: #6fd7de; -fx-border-color: black; -fx-border-width: 5;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Vista.ControladoraModificarDonacion">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="602.0" prefWidth="423.0" style="-fx-background-color: #6fd7de; -fx-border-color: black; -fx-border-width: 5;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Vista.ControladoraModificarDonacion">
    <children>
-      <TextField alignment="CENTER" layoutX="137.0" layoutY="61.0" promptText="CÓDIGO DONACIÓN" />
-      <TextField alignment="CENTER" layoutX="137.0" layoutY="144.0" promptText="VOLUMEN: 0L" />
-      <TextField alignment="CENTER" layoutX="137.0" layoutY="225.0" promptText="TIPO SANGRE" />
-      <TextField alignment="CENTER" layoutX="137.0" layoutY="103.0" promptText="FECHA: DD/MM/YYYY" />
-      <TextField alignment="CENTER" layoutX="120.0" layoutY="186.0" prefHeight="25.0" prefWidth="183.0" promptText="ÚLT. DONACIÓN: DD/MM/YYYY" />
-      <TextField alignment="CENTER" layoutX="138.0" layoutY="20.0" promptText="CÓDIGO DONANTE" />
-      <Button fx:id="buttonclose" layoutX="162.0" layoutY="261.0" mnemonicParsing="false" onAction="#ModDonacion" prefHeight="49.0" prefWidth="100.0" text="Editar" />
-      <Button layoutX="158.0" layoutY="325.0" mnemonicParsing="false" prefHeight="49.0" prefWidth="108.0" text="Borrar" />
+      <TextField fx:id="cod_donacion" alignment="CENTER" layoutX="137.0" layoutY="61.0" promptText="CÓDIGO DONACIÓN" />
+      <TextField fx:id="volumen" alignment="CENTER" layoutX="137.0" layoutY="144.0" promptText="VOLUMEN: 0L" />
+      <TextField fx:id="sangre" alignment="CENTER" layoutX="137.0" layoutY="225.0" promptText="TIPO SANGRE" />
+      <TextField fx:id="fecha" alignment="CENTER" layoutX="137.0" layoutY="103.0" promptText="FECHA: DD/MM/YYYY" />
+      <TextField fx:id="ultima" alignment="CENTER" layoutX="120.0" layoutY="186.0" prefHeight="25.0" prefWidth="183.0" promptText="ÚLT. DONACIÓN: DD/MM/YYYY" />
+      <Button fx:id="add" layoutX="162.0" layoutY="261.0" mnemonicParsing="false" onAction="#Editar" prefHeight="49.0" prefWidth="100.0" text="Editar" />
+      <Button fx:id="borrar" layoutX="158.0" layoutY="325.0" mnemonicParsing="false" onAction="#Borrar" prefHeight="49.0" prefWidth="108.0" text="Borrar" />
+      <TableView fx:id="tabla" layoutX="15.0" layoutY="396.0" prefHeight="200.0" prefWidth="393.0">
+        <columns>
+          <TableColumn fx:id="col_codigo" prefWidth="138.0" text="ID" />
+          <TableColumn fx:id="col_ultima" prefWidth="138.0" text="Ultima Donacion" />
+            <TableColumn fx:id="col_volumen" prefWidth="138.0" text="Volumen" />
+            <TableColumn fx:id="col_sangre" prefWidth="138.0" text="Tipo Sanguineo" />
+            <TableColumn fx:id="col_fecha" prefWidth="138.0" text="Fecha" />
+        </columns>
+      </TableView>
    </children>
 </AnchorPane>
