--- a/src/Vista/AnadirDonacion.fxml
+++ b/src/Vista/AnadirDonacion.fxml
@@ -6,13 +6,13 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="423.0" style="-fx-background-color: #6fd7de; -fx-border-width: 5; -fx-border-color: black;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Vista.ControladoraAnadirDonacion">
    <children>
-      <TextField alignment="CENTER" layoutX="137.0" layoutY="61.0" promptText="CÓDIGO DONACIÓN" />
-      <TextField alignment="CENTER" layoutX="137.0" layoutY="144.0" promptText="VOLUMEN: 0L" />
-      <TextField alignment="CENTER" layoutX="137.0" layoutY="225.0" promptText="TIPO SANGRE" />
-      <TextField alignment="CENTER" layoutX="137.0" layoutY="103.0" promptText="FECHA: DD/MM/YYYY" />
-      <TextField alignment="CENTER" layoutX="120.0" layoutY="186.0" prefHeight="25.0" prefWidth="183.0" promptText="ÚLT. DONACIÓN: DD/MM/YYYY" />
-      <TextField alignment="CENTER" layoutX="138.0" layoutY="20.0" promptText="CÓDIGO DONANTE" />
-      <Button fx:id="buttonclose" layoutX="162.0" layoutY="261.0" mnemonicParsing="false" onAction="#addDonacion" prefHeight="49.0" prefWidth="100.0" text="Añadir" />
-      <Button layoutX="158.0" layoutY="325.0" mnemonicParsing="false" prefHeight="49.0" prefWidth="108.0" text="Borrar" />
+      <TextField fx:id="cod_donacion" alignment="CENTER" layoutX="137.0" layoutY="61.0" promptText="CÓDIGO DONACIÓN" />
+      <TextField fx:id="volumen" alignment="CENTER" layoutX="137.0" layoutY="144.0" promptText="VOLUMEN: X L" />
+      <TextField fx:id="sangre" alignment="CENTER" layoutX="137.0" layoutY="225.0" promptText="TIPO SANGRE" />
+      <TextField fx:id="fecha" alignment="CENTER" layoutX="137.0" layoutY="103.0" promptText="FECHA: DD/MM/YYYY" />
+      <TextField fx:id="ultima" alignment="CENTER" layoutX="120.0" layoutY="186.0" prefHeight="25.0" prefWidth="183.0" promptText="ÚLT. DONACIÓN: DD/MM/YYYY" />
+      <TextField fx:id="cod_donante" alignment="CENTER" layoutX="138.0" layoutY="20.0" promptText="CÓDIGO DONANTE" />
+      <Button fx:id="add" layoutX="162.0" layoutY="261.0" mnemonicParsing="false" onAction="#addDonacion" prefHeight="49.0" prefWidth="100.0" text="Añadir" />
+      <Button fx:id="borrar" layoutX="158.0" layoutY="325.0" mnemonicParsing="false" onAction="#Borrar" prefHeight="49.0" prefWidth="108.0" text="Borrar" />
    </children>
 </AnchorPane>
